# atomic

./: .gitignore  .gitmodules
atomic/: CMakeLists.txt  README  build.sh
atomic/src/: CMakeLists.txt
atomic/src/include/: batch_processor.h  concrete_task.h  data_type_checker.h  data_type_info.h  io_type_checker.h  io_type_helper.h  io_type_info.h  io_types.h  parameters.h  pipeline.h  pipeline_config.h  pipeline_factory.h  processor.h  settings.h  stream_processor.h  task.h  task_factory.h  task_parameters.h  task_parameters_factory.h  task_processor.h  variant_helper.h
atomic/src/include/task_processors/: add.h  avg.h  log.h  mul.h  multiply.h  pow.h
atomic/src/include/tasks/: add.h  multiply.h
atomic/src/source/: batch_processor.cpp  concrete_task.cpp  data_type_checker.cpp  data_type_info.cpp  io_type_checker.cpp  io_type_helper.cpp  io_type_info.cpp  parameters.cpp  pipeline.cpp  pipeline_config.cpp  pipeline_factory.cpp  processor.cpp  settings.cpp  stream_processor.cpp  task.cpp  task_factory.cpp  task_parameters.cpp  task_parameters_factory.cpp
atomic/standalone/: CMakeLists.txt  README  input.txt  pipeline.yml
atomic/standalone/include/: cli_options.h  pipeline_config_loader.h
atomic/standalone/source/: README  cli_options.cpp  main.cpp  pipeline_config_loader.cpp  settings_loader.cpp
atomic/test/: CMakeLists.txt
atomic/test/source/: test.cpp
atomic2/: .clang-format  CMakeLists.txt  README  build.sh
atomic2/client/: CMakeLists.txt
atomic2/client/source/: client.cpp  route_guide_client.cpp
atomic2/common/include/: employee.h  employee_dto.h  helper.h
atomic2/common/source/: helper.cc  helper.cpp
atomic2/protos/: employee.proto
atomic2/server/: CMakeLists.txt  build.sh
atomic2/server/include/: database.h
atomic2/server/source/: database.cpp  employees.db  route_guide_server.cpp  server.cpp
